<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/empty_view"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <rsr.info.basic.viswaLab.views.TextViewPlus
                android:id="@+id/splash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="3dp"
                android:text="PRICED"
                android:textColor="@color/login_btn_click_color"
                android:textSize="28sp"
                foo:customFont="@string/font_freedoka" />

            <rsr.info.basic.viswaLab.views.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="3dp"
                android:text="PROPERTY"
                android:textColor="#fff"
                android:textSize="28sp"
                foo:customFont="@string/font_freedoka" />
        </LinearLayout>

        <rsr.info.basic.viswaLab.views.TextViewPlus
            android:id="@+id/register_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/register_msg"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            foo:customFont="@string/font_sans" />

        <rsr.info.basic.viswaLab.utils.ButtonPlus
            android:id="@+id/login"
            style="@style/btn_lg.btn_info"
            android:layout_below="@+id/login"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="Login" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/dark_grey" />

            <TextView
                android:id="@+id/view_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/app_bg"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/or" />


        </FrameLayout>

        <rsr.info.basic.viswaLab.utils.ButtonPlus
            android:id="@+id/agentsignUpTextView"
            style="@style/btn_lg.btn_info"
            android:layout_below="@+id/login"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/agent_register" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/dark_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/app_bg"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/or" />
        </FrameLayout>

        <rsr.info.basic.viswaLab.utils.ButtonPlus
            android:id="@+id/companysignUpTextView"
            style="@style/btn_lg.btn_info"
            android:layout_below="@+id/login"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/company_register" />
    </LinearLayout>

</RelativeLayout>