<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_btn_click_color">

    <rsr.info.basic.viswaLab.views.TextViewPlus
        android:id="@+id/pager_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:text="@string/action_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        foo:customFont="@string/font_sans" />

    <rsr.info.basic.viswaLab.views.TextViewPlus
        android:id="@+id/pager_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/pager_title"
        android:layout_alignRight="@id/pager_title"
        android:layout_below="@id/pager_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/action_settings"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold"
        foo:customFont="@string/font_sans" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pager_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pager_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <rsr.info.basic.viswaLab.views.TextViewPlus
            android:id="@+id/pager_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/or"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/pager_image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>