<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ed_rounded_corners"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <dev.info.basic.viswaLab.views.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/start_with"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:customFont="@string/font_sans" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <dev.info.basic.viswaLab.views.TextViewPlus
                android:id="@+id/splash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PRICED"
                android:textColor="@color/login_btn_click_color"
                app:customFont="@string/font_freedoka" />

            <dev.info.basic.viswaLab.views.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="PROPERTY"
                android:textColor="@color/splash_bg"
                app:customFont="@string/font_freedoka" />
        </LinearLayout>

    </LinearLayout>

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/start_layout"
        android:layout_gravity="bottom"
        android:layout_marginBottom="48dp"
        app:ci_drawable="@drawable/black_radius"
        app:ci_drawable_unselected="@drawable/white_radius"
        app:ci_height="8dp"
        app:ci_margin="6dp"
        app:ci_width="8dp" />


</RelativeLayout>