<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_default_color"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
        android:id="@+id/initial_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center"
        android:visibility="gone">

        <dev.info.basic.viswaLab.utils.ProgressWheel
            android:id="@+id/initial_loader_progress"
            android:layout_width="@dimen/custom_progressbar_width_height"
            android:layout_height="@dimen/custom_progressbar_width_height"
            android:layout_centerInParent="true"
            ProgressWheel:matProg_barColor="@color/login_btn_click_color"
            ProgressWheel:matProg_circleRadius="140dp"
            ProgressWheel:matProg_progressIndeterminate="true"
            ProgressWheel:matProg_rimWidth="2dp" />

        <ImageView
            android:layout_width="@dimen/custom_progressbar_image_width_height"
            android:layout_height="@dimen/custom_progressbar_image_width_height"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <dev.info.basic.viswaLab.views.TextViewPlus
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Lube Oil Samples"
            android:textAllCaps="true"
            android:textColor="#5B5B5B"
            android:textSize="18sp"
            android:textStyle="bold"
            foo:customFont="@string/pt_sans_bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <dev.info.basic.viswaLab.views.TextViewPlus
                android:id="@+id/name"
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textStyle="bold" />

            <dev.info.basic.viswaLab.views.TextViewPlus
                android:id="@+id/curmnt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/crtMonth"
                android:textColor="#000"
                foo:customFont="@string/pt_sans_bold" />

            <dev.info.basic.viswaLab.views.TextViewPlus
                android:id="@+id/premnt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/preMonth"
                android:textColor="#000"
                foo:customFont="@string/pt_sans_bold" />

            <dev.info.basic.viswaLab.views.TextViewPlus
                android:id="@+id/curyear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/crtYear"
                android:textColor="#000"
                foo:customFont="@string/pt_sans_bold" />
        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/mRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:dividerHeight="5dp">

    </android.support.v7.widget.RecyclerView>

    <Spinner
        android:id="@+id/spnr"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_background"
        android:visibility="gone" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/mPieChart"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:visibility="gone">

    </com.github.mikephil.charting.charts.PieChart>


</LinearLayout>